src/main/java/com/example/pismobank/errors/UserNotFoundException.java
package com.example.pismobank.errors;

public class UserNotFoundException extends RuntimeException {
}
